Projeto de player de musica desenvolvido em react js

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--text-primary);
+  background-color: var(--background);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root{
+  --primary: #ff2400;
+  --background: #121212;
+  --background-paper: #181818;
+  --text-primary: #fdfdfd;
+  --text-secondary: #7c7c7c;
+  --divider: rgba(255, 255, 255, 0.1);
 }
